cloud/kubernetes/rancher-desktop/kubernetes-rancher-desktop-simple.yml
apiVersion: v1
kind: Namespace
metadata:
  name: reports-kubernetes-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: rancher-pod
  namespace: reports-kubernetes-namespace
  labels:
    app.kubernetes.io/name: reports-apache-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: kong-pod
  namespace: reports-kubernetes-namespace
  labels:
    app.kubernetes.io/name: kong-pod
spec:
  containers:
    - name: kong
      image: kong:latest
      ports:
        - containerPort: 8001
    - name: kong-ui
      image: pocketdigi/kong-admin-ui:0.5.3
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reports-apache-service
  namespace: reports-kubernetes-namespace
spec:
  selector:
    app.kubernetes.io/name: reports-apache-pod
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: kong-ui-service
  namespace: reports-kubernetes-namespace
spec:
  selector:
    app.kubernetes.io/name: kong-pod
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kong-service
  namespace: reports-kubernetes-namespace
spec:
  selector:
    app.kubernetes.io/name: kong-pod
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8001
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: reports-kubernetes-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: reports-apache.rancher.localhost
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: reports-apache-service
            port:
              number: 8080
  tls:
  - hosts:
    - reports-apache.rancher.localhost
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-kong
  namespace: reports-kubernetes-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kong.rancher.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kong-service
                port:
                  number: 8000
  tls:
    - hosts:
        - kong.rancher.localhost
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-kong-ui
  namespace: reports-kubernetes-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kong-ui.rancher.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kong-ui-service
                port:
                  number: 8080
  tls:
    - hosts:
        - kong-ui.rancher.localhost
